# bicycle

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  benchmark_matrices.txt  benchmark_parameters.txt  bicycle.cc  bicycle.h  kalman.h  lqr.hh  test.cc  test_kalman.cc  test_lqr.cc  test_lqr_kalman.cc  test_state_space_map.cc
cmake/: boost.cmake  functions.cmake
examples/: CMakeLists.txt  bicycle_arend_model.cc  bicycle_fbs.cc  bicycle_kinematic_model.cc  bicycle_model.cc  bicycle_no_discretization.cc  bicycle_param.cc  full_fbs.cc  kalman.cc  lqr.cc  lqr_kalman.cc  luenberger.cc  oracle.cc  serial.cc  state_space_map.cc  udp.cc  udp_send_receive.cc
fbs/: CMakeLists.txt  generate_fbs.py  sample.fbs  sample_generated.h  sample_log.fbs  sample_util.h
fbs/templates/: nptypes.py.in  sample.fbs.in  sample_util.h.in
inc/: bicycle.h  constants.h  discrete_linear.h  exception.h  kalman.h  lqr.h  luenberger.h  massspringdamper.h  network_server.h  observer.h  oracle.h  parameters.h  pole.h  sample_util.h  serial.h  types.h
inc/bicycle/: arend.h  base.h  bicycle.h  kinematic.h  solve_constraint_pitch.h  whipple.h
python/: bicycle_scene.py  convert.py  generate_state_space.py  nmrecords.py  np_types.py  nptypes.py  pitch_constraint.py  plot_samples.py  print_sample_log.py  print_samples.py
python/fbs/: AuxiliaryState.py  Bicycle.py  FeedthroughMatrix.py  Input.py  InputMatrix.py  Kalman.py  KalmanGainMatrix.py  Lqr.py  LqrGainMatrix.py  Output.py  OutputMatrix.py  Sample.py  SampleBuffer.py  SampleLog.py  SecondOrderMatrix.py  State.py  StateMatrix.py  SymmetricInputMatrix.py  SymmetricOutputMatrix.py  SymmetricStateMatrix.py
python/scripts/: create_viz.py  replay_viz.py
src/: bicycle.cc  kalman.hh  lqr.hh  luenberger.hh  massspringdamper.cc  network_server.cc  oracle.hh  parameters.cc  pole.hh  serial.cc
src/bicycle/: arend.cc  bicycle.cc  bicycle.hh  bicycle_solve_constraint_pitch.cc  kinematic.cc  solve_constraint_pitch.cc  whipple.cc
tests/: CMakeLists.txt  test_convergence.cc  test_convergence.h  test_kalman.cc  test_lqr.cc  test_lqr_kalman.cc  test_state_space.cc  test_state_space.h  test_utilities.h
tools/: CMakeLists.txt  flatprint.cc
