add_executable(bicycle_model bicycle_model.cc ${BICYCLE_SOURCE})
add_executable(kalman kalman.cc ${BICYCLE_SOURCE})
add_executable(lqr lqr.cc ${BICYCLE_SOURCE})
add_executable(lqr_kalman lqr_kalman.cc ${BICYCLE_SOURCE})
add_executable(state_space_map state_space_map.cc ${BICYCLE_SOURCE})
add_executable(bicycle_fbs bicycle_fbs.cc ${BICYCLE_SOURCE})
add_executable(full_fbs full_fbs.cc ${BICYCLE_SOURCE})

add_dependencies(bicycle_fbs generate_flatbuffer_headers)
target_link_libraries(bicycle_fbs flatbuffers)
add_dependencies(full_fbs generate_flatbuffer_headers)
target_link_libraries(full_fbs flatbuffers)
